--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,53 +1,29 @@
-set -g history-limit 5000
-#set -s escape-time 10
-#set -sg repeat-time 600
-set -g default-terminal "screen-256color"
+# Improve colors
+set -g default-terminal 'screen-256color'
 
-# -- display -------------------------------------------------------------------
-set -g base-index 1           # start windows numbering at 1
-setw -g pane-base-index 1     # make pane numbering consistent with windows
+# Set scrollback buffer to 10000
+set -g history-limit 10000
 
-setw -g automatic-rename on   # rename window to reflect current program
-set -g renumber-windows on    # renumber windows when a window is closed
-
-set -g set-titles on          # set terminal title
-
-set -g display-panes-time 800 # slightly longer pane indicators display time
-set -g display-time 1000      # slightly longer status messages display time
-
-set -g status-interval 10     # redraw status line every 10 seconds
-
-# clear both screen and history
-bind -n C-l send-keys C-l \; run 'sleep 0.1' \; clear-history
-
-# activity
-set -g monitor-activity on
-set -g visual-activity off
-
-# Active window title color
-setw -g window-status-current-style fg=black,bg=white
-
-# split panes using | and -
-bind | split-window -h
-bind - split-window -v
-unbind '"'
-unbind %
+# Customize the status line
+set -g status-fg  green
+set -g status-bg  black
 
 # remap prefix from 'C-b' to 'C-a'
-unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
+# unbind C-b
+#set-option -g prefix C-q
+#bind-key C-q send-prefix
 
-setw -g mouse on
-setw -g xterm-keys on
+# split panes using | and -
+#bind | split-window -h
+#bind - split-window -v
+#unbind '"'
+#unbind %
 
-
-set -g history-limit 5000
-#set -s escape-time 10
-#set -sg repeat-time 600
-set -g default-terminal "screen-256color"
+#enable mouse
+set -g mouse on
 
 # -- display -------------------------------------------------------------------
+
 set -g base-index 1           # start windows numbering at 1
 setw -g pane-base-index 1     # make pane numbering consistent with windows
 
@@ -61,80 +37,15 @@ set -g display-time 1000      # slightly longer status messages display time
 
 set -g status-interval 10     # redraw status line every 10 seconds
 
-# clear both screen and history
-bind -n C-l send-keys C-l \; run 'sleep 0.1' \; clear-history
+# List of plugins
+# set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'tmux-plugins/tmux-sensible'
 
-# activity
-set -g monitor-activity on
-set -g visual-activity off
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'github_username/plugin_name#branch'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
 
-# Active window title color
-setw -g window-status-current-style fg=black,bg=white
-
-# Redraw the client (if interrupted by wall, etc)
-bind R refresh-client
-
-# =====================================
-# ===           Theme               ===
-# =====================================
-
-# Feel free to NOT use this variables at all (remove, rename)
-# this are named colors, just for convenience
-color_orange="colour166" # 208, 166
-color_purple="colour134" # 135, 134
-color_green="colour076" # 070
-color_blue="colour39"
-color_yellow="colour220"
-color_red="colour160"
-color_black="colour232"
-color_white="white" # 015
-
-# This is a theme CONTRACT, you are required to define variables below
-# Change values, but not remove/rename variables itself
-color_dark="$color_black"
-color_light="$color_white"
-color_session_text="$color_blue"
-color_status_text="colour245"
-color_main="$color_orange"
-color_secondary="$color_purple"
-color_level_ok="$color_green"
-color_level_warn="$color_yellow"
-color_level_stress="$color_red"
-color_window_off_indicator="colour088"
-color_window_off_status_bg="colour238"
-color_window_off_status_current_bg="colour254"
-
-# =====================================
-# ===    Appearence and status bar  ===
-# ======================================
-
-set -g mode-style "fg=default,bg=$color_main"
-
-# command line style
-set -g message-style "fg=$color_main,bg=$color_dark"
-
-# status line style
-set -g status-style "fg=$color_status_text,bg=$color_dark"
-
-# window segments in status line
-set -g window-status-separator ""
-separator_powerline_left=""
-separator_powerline_right=""
-
-# setw -g window-status-style "fg=$color_status_text,bg=$color_dark"
-setw -g window-status-format " #I:#W "
-setw -g window-status-current-style "fg=$color_light,bold,bg=$color_main"
-setw -g window-status-current-format "#[fg=$color_dark,bg=$color_main]$separator_powerline_right#[default] #I:#W# #[fg=$color_main,bg=$color_dark]$separator_powerline_right#[default]"
-
-# when window has monitoring notification
-setw -g window-status-activity-style "fg=$color_main"
-
-# outline for active pane
-setw -g pane-active-border-style "fg=$color_main"
-
-# general status bar settings
-set -g status on
-set -g status-interval 5
-#set -g status-position top
-set -g status-justify left
-set -g status-right-length 100
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
